** All values must be in the values that are also allowed on reading
** Missing values are added if the are in SubjectFilters but not in the Wrs as long as they are unambiguous
** Allowed are a single SubjectFilter, a flat bnd:And or a flat bnd:Or, but no nested expressions
* OAuth2: add general support with Shiro integration for authentication.
** Add OAuth2 authentication modules for Microsoft Azure / Graph and Google

. Server
* Updated 3rd party jars (apache commons etc) to latest versions
* Add notLike and notIn operators to f:Filter, including universal filter widget
* Wrq where and having clause does now understand virual binding items: f:Expression/@bRef referencing a wrq:Columns/wrq:C which is having a wrq:Calc expressing, are now using that wrq:Calc expression

. Build / Dev / Docu
* In Eclipse, sub-projects Client, Server, Theme etc now have names BCD-UI--SubProjectName to keep them together in the navigation tree
* Switched to gradle 4.2, added gradle wrapper, updated nodeJs to 6.11
* Updated bcduiApiStubs.js to fit Eclipse Oxygen+Tern and IDEA 2017.2
* HTML JS API docu is now showing source names and lines

.Major bug fixes:
* I18n: local messages.xml catalog file can contain multi language enabling full i18n support w/o database
* HTML Custom Elements for Safari was broken, after Safari switched to Webcomponents API v1

.Backward Incompatibilities:

* Menu: when using old scss themes, you need to specify '{ bcdui: { legacyTheme: true } }' in bcdui/conf/settings.json
* jQueryMobile is not compatible with jQuery 3.x anymore. When using jQueryMobile, you need to build bcdui with a jQuery 2.x
* bcd_virtualFileSystem got additional columns updatedBy, last_update, bcd_userId with additional writebacks and security constraints and a new additional key column
* Component: cube/scorecard blindUpDowns, ranking require new i18n keys (bcd_Rank_, bcd_Sc_Blind_, bcd_Cb_Blind_)
* Charts: Moved VML drawer to BCD-UI-DE