@@ -16,6 +16,9 @@
   ~ specific language governing permissions and limitations
   ~ under the License.
   -->
+<!--
+  Overwrite shiro authorization caching by placing our own version at WEB-INF/classes/org/apache/shiro/cache/ehcache/ehcache.xml
+ -->
 <ehcache updateCheck="false" name="org.apache.shiro.cache.ehcache">
 
     <!-- Sets the path to the directory where cache .data files are created.
@@ -72,14 +75,9 @@
             diskExpiryThreadIntervalSeconds="120"
             />
 
-    <!-- We want eternal="true" and no timeToIdle or timeToLive settings because Shiro manages session
-         expirations explicitly.  If we set it to false and then set corresponding timeToIdle and timeToLive properties,
-         ehcache would evict sessions without Shiro's knowledge, which would cause many problems
-        (e.g. "My Shiro session timeout is 30 minutes - why isn't a session available after 2 minutes?"
-               Answer - ehcache expired it due to the timeToIdle property set to 120 seconds.)
-
-        diskPersistent=true since we want an enterprise session management feature - ability to use sessions after
-        even after a JVM restart.  -->
+    <!-- Keep the session cache to eternal.
+         Timeout is handled by Shiro and cache should not drop info per se
+         In a web container, Shiro's default is ServletContainerSessionManager and session timeout is controlled by container's session-timeout in web.xml -->
     <cache name="shiro-activeSessionCache"
            maxElementsInMemory="10000"
            overflowToDisk="true"
@@ -89,9 +87,13 @@
            diskPersistent="true"
            diskExpiryThreadIntervalSeconds="600"/>
 
-    <cache name="org.apache.shiro.realm.text.PropertiesRealm-0-accounts"
+    <!-- Timeout determines, when realmBcdJdbc = de.businesscode.bcdui.subjectsettings.JdbcRealm re-reads
+         rights from bcd_sec_usersettings during an ongoing session -->
+    <cache name="realmBcdJdbc.authorizationCache"
            maxElementsInMemory="1000"
-           eternal="true"
+           eternal="false"
+           timeToIdleSeconds="3600"
+           timeToLiveSeconds="3600"
            overflowToDisk="true"/>
 
 </ehcache>
